*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
@@ -4,12 +4,11 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Synchronizing our project</title>
+<title>Sharing our project</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>
-Synchronizing our project</h3>
+<h3> Sharing our project</h3>
 <P CLASS="Para">
 We have created our project and specified our repository location. Now we need
 to make our project available to other team members.</P>
@@ -38,8 +37,8 @@ In the Navigator view select the project JanesTeamProject.</P>
 </TD>
     <TD valign="top" align="left"> 
       <P CLASS="Para">From the project's context menu choose Team &gt; Share Project. 
-        If you have more than one repository provider installed, pick CVS. her 
-        own report of aSelect the location we created previously.</P>
+        If you have more than one repository provider installed, pick CVS and 
+        press Next. Select the location we created previously.</P>
 </TD>
 </TR>
 <TR>
@@ -50,8 +49,8 @@ In the Navigator view select the project JanesTeamProject.</P>
 </P>
 </TD>
     <TD valign="top" align="left"> 
-      <P CLASS="Para"> From the project's context menu choose Team &gt; Synchronize 
-        with Repository.</P>
+      <P CLASS="Para"> In the sharing wizard page, select the location we created 
+        previously.</P>
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image82_repo_sync1.jpg" width="408" height="422" alt="Set Project Sharing"></p>
 </blockquote>
@@ -65,36 +64,23 @@ In the Navigator view select the project JanesTeamProject.</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P CLASS="Para">
-Click OK when you are done.</P>
+      <P CLASS="Para"> Click Ginish when you are done.</P>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
 <b>5.</b>
 </TD>
-<TD valign="top" align="left">
-Observe that the Team perspective automatically opens. The title of the workbench
-window and the shortcut bar both reflect the fact that the Team perspective is
-active, and consequently the Resource perspective is no longer active.
-<blockquote>
+    <TD valign="top" align="left"> Observe that the Synchronize view automatically 
+      opens. In the next section we will see how to use this view to release our 
+      work to the repository. 
+      <blockquote> 
   <p><img align="texttop" border="0" src="../images/Image82_repo_team.jpg" width="201" height="230" alt="Team Perspective"></p>
 </blockquote>
 </TD>
 </TR>
 </TBODY>
 </TABLE>
-<P>In the middle of the Team perspective is a large view called the Synchronize
-view. In the next section we will see how
-to use this view to release our work to the repository.
-</P>
-
-
-<blockquote>
-  <P><img align="texttop" border="0" src="../images/image82_repo_syncview.jpg" width="484" height="364" alt="Release mode sych view">
-</P>
-
-
 </blockquote>
 <P>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
