--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
@@ -10,13 +10,13 @@
 <BODY BGCOLOR="#ffffff">
 <h3>
 Another user making changes</h3>
-<p CLASS="Para">Now that Fred has the project in his workbench he needs to
-modify several of the files and synchronize with the HEAD stream in order to
-release them.</p>
+<p CLASS="Para">Now that Fred has the project in his workbench he needs to modify 
+  several of the files and synchronize with the the repository in order to commit 
+  them.</p>
 <ul>
   <li>Fred will make changes to file1.txt and file2.txt</li>
   <li>You will simultaneously make changes&nbsp; to file2.txt and file3.txt</li>
-  <li>Fred will synchronize and release his (outgoing) changes to the two files.</li>
+  <li>Fred will synchronize and commit his (outgoing) changes to the two files.</li>
 </ul>
 <p CLASS="Para">Fred should proceed as follows:</p>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
@@ -64,8 +64,8 @@ Modify file2.txt as follows
   <p><i>File2 is a (<b>Fred was here) </b>small file<br>
   with simple text.&nbsp;</i></p>
 </blockquote>
-<p CLASS="Para">
-&nbsp;
+<p CLASS="Para">&nbsp;
+
 </TD>
 </TR>
 <TR>
@@ -76,14 +76,15 @@ Modify file2.txt as follows
 </P>
 </TD>
 <TD valign="top" align="left">
-<P CLASS="Para">In the Navigator view&nbsp; click the views pull-down menu and
-choose Show Version Info.</P>
+      <P CLASS="Para">Open the preferences (Window &gt; Preferences) and turn 
+        on the CVS label decorations (on page Workbench &gt; Label Decorations 
+        check off CVS).</P>
 <blockquote>
   <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred_info.jpg" alt="Navigator View" width="341" height="133" ></P>
 </blockquote>
-<P CLASS="Para">Observe that the Navigator updates to show the version information.
-Notice that the two files which Fred has changed are preceded by
-&quot;&gt;&quot;.</P>
+      <P CLASS="Para">Observe that the Navigator updates to show the CVS state 
+        of a resource. Notice that the two files which Fred has changed are preceded 
+        by &quot;&gt;&quot;.</P>
 <blockquote>
   <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred_verson.jpg" alt="Navigator View" width="297" height="200" >&nbsp;</P>
 </blockquote>
@@ -93,25 +94,24 @@ Notice that the two files which Fred has changed are preceded by
 <TD valign="top" align="left">
 <b>4.</b>
 </TD>
-<TD valign="top" align="left">
-To release his changes to the stream Fred can either:
-<ul>
-  <li>select the two files and choose Team &gt; Synchronize with Stream or,</li>
-  <li>select the project and choose Team &gt; Synchronize with Stream</li>
-</ul>
-<p>Often choosing the project is the easiest thing to do. Let's do just that.
-Select the project and choose Team &gt; Synchronize with Stream from its context
-menu.&nbsp;</p>
+    <TD valign="top" align="left"> To commit his changes to the repository Fred 
+      can either: 
+      <ul>
+        <li>select the two files and choose Team &gt; Synchronize with Repository 
+          or,</li>
+        <li>select the project and choose Team &gt; Synchronize with Repository</li>
+      </ul>
+      <p>Often choosing the project is the easiest thing to do. Let's do just that. 
+        Select the project and choose Team &gt; Synchronize with Repository from 
+        its context menu.&nbsp;</p>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
 <b>5.</b>
 </TD>
-<TD valign="top" align="left">
-When the Synchronize view opens Fred should release his changes to file1.txt and
-file2.txt.
-</TD>
+    <TD valign="top" align="left"> When the Synchronize view opens Fred should 
+      commit his changes to file1.txt and file2.txt. </TD>
 </TR>
 </TBODY>
 </TABLE>
