--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
@@ -10,9 +10,10 @@
 <BODY BGCOLOR="#ffffff">
 <h3>
 Making our own changes</h3>
-<p CLASS="Para">Fred has made several changes to file1.txt and file2.txt and
-released them to the stream. We now need to make some changes for ourself and&nbsp; then synchronize with the stream. When we synchronize we expect to see
-the changes we have made along with changes that have been made by Fred.</p>
+<p CLASS="Para">Fred has made several changes to file1.txt and file2.txt and released 
+  them to the repository. We now need to make some changes for ourself and&nbsp; 
+  then synchronize with the repository. When we synchronize we expect to see the 
+  changes we have made along with changes that have been made by Fred.</p>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
 <THEAD>
 </THEAD>
@@ -58,15 +59,16 @@ Modify file3.txt as follows
 <TD valign="top" align="left">
 <b>3.</b>
 </TD>
-<TD valign="top" align="left">
-<P CLASS="Para">In the Navigator view&nbsp; click the views pull-down menu and
-choose Show Version Info.</P>
+    <TD valign="top" align="left"> 
+      <P CLASS="Para">Open the preferences (Window &gt; Preferences) and turn 
+        on the CVS label decorations (on page Workbench &gt; Label Decorations 
+        and ensure CVS is checked).</P>
 <blockquote>
   <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred_info.jpg" alt="Navigator View" width="341" height="133" ></P>
 </blockquote>
-<P CLASS="Para">Observe that the Navigator updates to show the version information.
-Notice that the two files we have changed are preceded by
-&quot;&gt;&quot;.</P>
+      <P CLASS="Para">Observe that the Navigator updates to show the CVS state of a 
+        resource. Notice that the two files which Fred has changed are preceded 
+        by &quot;&gt;&quot;.</P>
 <blockquote>
   <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_jane1.jpg" alt="Navigator View" width="249" height="159" >&nbsp;</P>
 </blockquote>
@@ -91,8 +93,8 @@ Select the project (JanesTeamProject)</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P CLASS="Para">
-From the project's context menu, select Team &gt; Synchronize with Stream.</P>
+      <P CLASS="Para"> From the project's context menu, select Team &gt; Synchronize 
+        with Repository.</P>
 </TD>
 </TR>
 <TR>
@@ -102,13 +104,13 @@ From the project's context menu, select Team &gt; Synchronize with Stream.</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-<p>There are couple of other things worth observing. First, the icon next to
-file1.txt (in the structured compare area) indicates that file1.txt has an
-incoming change. This means a change was released to the server which you need to
-take. Looking at file2.txt we can see a more ominous red icon. This indicates
-that both yourself and the stream have changes to the same file. This means that
-someone else (namely Fred) made changes to the same resource as the one you want
-to release.</p>
+      <p>There are couple of other things worth observing. First, the icon next 
+        to file1.txt (in the structured compare area) indicates that file1.txt 
+        has an incoming change. This means a change was released to the server 
+        which you need to take. Looking at file2.txt we can see a more ominous 
+        red icon. This indicates that both yourself and the repository have changes 
+        to the same file. This means that someone else (namely Fred) made changes 
+        to the same resource as the one you want to commit.</p>
 <p>The second thing worth noting is that the status bar has red text indicating
 what changes need to be considered.</p>
 <p><img align="texttop" border="0" src="../images/Image83_jane3_status.jpg" alt="Status line" width="308" height="22" >
