--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
@@ -4,15 +4,13 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Catching up</title>
+<title>Updating</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>
-Catching up</h3>
-<p CLASS="Para">
-We will now use the Synchronize view to catch up to the team stream and to release our
-changes.&nbsp;</p>
+<h3> Updating</h3>
+<p CLASS="Para"> We will now use the Synchronize view to update our local resource 
+  to the latest contents in the repository contents and to commit our changes.&nbsp;</p>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
 <THEAD>
 </THEAD>
@@ -23,10 +21,10 @@ changes.&nbsp;</p>
 <b>1.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
-Confirm that the Synchronize view is in Catch Up Mode (#1). If not then press the
-Catch Up Mode button on the local toolbar (#2).
-<p><img align="texttop" border="0" src="../images/Image83_jane5a.jpg" alt="Catch up mode" width="481" height="128" ></p>
+    <TD valign="top" align="left"> Confirm that the Synchronize view is in Incoming 
+      Mode (#1). If not then press the Incoming Mode button on the local toolbar 
+      (#2). 
+      <p><img align="texttop" border="0" src="../images/Image83_jane5a.jpg" alt="Incoming mode" width="481" height="128" ></p>
 <p>&nbsp;
 </TD>
 </TR>
@@ -48,10 +46,9 @@ repository copy of file1.txt has a new line inserted (Fred-Update).
 <b>3.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
-From the context menu of file1.txt choose Catch Up. This will cause your
-workbench to be updated with the Repository copy of file1.txt.
-</TD>
+    <TD valign="top" align="left"> From the context menu of file1.txt choose Update. 
+      This will cause your workbench to be updated with the repository copy of 
+      file1.txt. </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
@@ -83,11 +80,11 @@ History from the context menu.</p>
 <TD valign="top" align="left">
 <b>6.</b>
 </TD>
-<TD valign="top" align="left">
-In the Resource History view (see above) we can see there is a * next to version 1.1. This
-indicates 1.1 is currently in our workbench. Looking at the right pane of the
-text compare viewer (above) we can see the stream contains 1.2 of file2.txt.&nbsp;
-<p>
+    <TD valign="top" align="left"> In the Resource History view (see above) we 
+      can see there is a * next to version 1.1. This indicates 1.1 is currently 
+      in our workbench. Looking at the right pane of the text compare viewer (above) 
+      we can see the repository contains 1.2 of file2.txt.&nbsp; 
+      <p>
 Looking at the history view again we can see that the author of 1.2 is Fred.
 Looks like it's time to ask Fred why he was changing file2.txt.&nbsp;</p>
 <p>If Fred had entered a meaningful description when releasing his changes,
@@ -99,24 +96,22 @@ History view thereby providing us with some insight into the intent of the chang
 <TD valign="top" align="left">
 <b>7.</b>
 </TD>
-<TD valign="top" align="left">
-You can use the four copy buttons to help you merge in conflicting changes made to
-the repository stream.
-<p>
+    <TD valign="top" align="left"> You can use the four copy buttons to help you 
+      merge in conflicting changes made to the repository. 
+      <p>
 For now we will assume that Fred's change turns out to be the right change.
-<p>Select file2.txt and choose Catch Up from the context menu. When asked to
-confirm the replacement choose Yes.
-<p>&nbsp;</p>
+      <p>Select file2.txt and choose Override and Update from the context menu. 
+        When asked to confirm the replacement choose Yes. 
+      <p>&nbsp;</p>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
 <b>8.</b>
 </TD>
-<TD valign="top" align="left">
-The Catch Up mode no longer has any remaining incoming or conflicting
-changes.&nbsp;
-<p>Looking at the status bar we can see there is still one remaining outgoing
+    <TD valign="top" align="left"> The Update mode no longer has any remaining 
+      incoming or conflicting changes.&nbsp; 
+      <p>Looking at the status bar we can see there is still one remaining outgoing
 change to deal with.</p>
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image84_status.jpg" alt="Status bar" width="329" height="23" ></p>
