--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
@@ -10,11 +10,11 @@
 <BODY BGCOLOR="#ffffff">
 <h3>
 Replacing</h3>
-<p CLASS="Head">
-Suppose after further reflection we realize that the version of file1.txt that we just
-received is incorrect and in fact we want an earlier version.
-You can replace a workbench resource with a versioned resource of the same name from the repository. To rollback to an
-earlier version we can&nbsp; proceed as follows:</p>
+<p CLASS="Head"> Suppose after further reflection we realize that the revision 
+  of file1.txt that we just received is incorrect and in fact we want an earlier 
+  revision. You can replace a workbench resource with an earlier revision of the 
+  resource from the repository. To rollback to an earlier revision we can&nbsp; 
+  proceed as follows:</p>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
 <THEAD>
 </THEAD>
@@ -39,8 +39,8 @@ In the Navigator view select the file1.txt</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P CLASS="Para">
-From the file's context menu, select Replace With &gt; Version...</P>
+      <P CLASS="Para"> From the file's context menu, select Replace With &gt; 
+        Revision...</P>
 </TD>
 </TR>
 <TR>
@@ -51,47 +51,45 @@ From the file's context menu, select Replace With &gt; Version...</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P CLASS="Para">
-In the Replace With Version in Repository dialog, choose the original (bottom-most) version and
-click the Replace button.</P>
+      <P CLASS="Para"> In the replace with revision Compare editor that opens, 
+        choose the original (bottom-most) revision and, from the popup menu choose 
+        Get Contents.</P>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
 <b>4.</b>
 </TD>
-<TD valign="top" align="left">
-Choose Show Version Info from the Navigator view pull-down menu
-<p><img align="texttop" border="0" src="../images/Image84_replace_info.jpg"  alt="Navigator View"></p>
-<p>Observe that the Navigator indicates that our project JanesTeamProject is
-associated with the HEAD stream (see #1). In addition the &quot;&gt;&quot; (see
-#2) indicator lets us know that we have changed file1.txt (by replacing it with the
-earlier version).&nbsp;</p>
-<p><img align="texttop" border="0" src="../images/Image84_replace2.jpg"  alt="File selection">
+    <TD valign="top" align="left"> Open the preferences (Window &gt; Preferences) 
+      and turn on the CVS label decorations (on page Workbench &gt; Label Decorations 
+      and ensure CVS is checked).
+<p><img align="texttop" border="0" src="../images/Image84_replace_info.jpg" width="341" height="133"></p>
+      <p>Observe that the Navigator updates to show the CVS state of a resource. 
+        Notice that the modified file is preceded by &quot;&gt; (see #1) indicating 
+        that we have changed file1.txt (by replacing it with the earlier version).&nbsp;</p>
+      <p><img align="texttop" border="0" src="../images/Image84_replace2.jpg"  alt="File selection">
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
 <b>5.</b>
 </TD>
-<TD valign="top" align="left">
-Now that we have finished our coffee we realize that this older version is not
-as good as it initially seemed and in fact the version in the stream is better
-after all.&nbsp;
-<p>Instead of choosing Team &gt; Synchronize with Stream to catch up to the
-stream let's choose Replace With &gt; Stream Contents.&nbsp;</p>
-<p>Observe that file1.txt is updated to be the contents from the stream, and
-that the leading indicator &quot;&gt;&quot; has been removed since we now have
-the same version as the stream.
-</TD>
+    <TD valign="top" align="left"> Now that we have finished our coffee we realize 
+      that this older revision is not as good as it initially seemed and in fact 
+      the revision in the repository is better after all.&nbsp; 
+      <p>Instead of choosing Team &gt; Synchronize with Repository, let's choose 
+        Replace With &gt; Latest from Repository.&nbsp;</p>
+      <p>Observe that file1.txt is updated to be the contents from the repository, 
+        and that the leading indicator &quot;&gt;&quot; has been removed since 
+        we now have the same revision as the repository. 
+    </TD>
 </TR>
 </TBODY>
 </TABLE>
-<P>We have seen how to synchronize with the stream, replace with versions from
-the stream or the repository. You can also compare with these versions in a
-similar manner by choosing the&nbsp; Compare With menu operation from a resource's
-context menu in the Navigator.
-</P>
+<P>We have seen how to synchronize with the repository, replace with revision 
+  or replace with the latest from the repository. You can also compare with these 
+  revisions/versions in a similar manner by choosing the&nbsp; Compare With menu 
+  operation from a resource's context menu in the Navigator. </P>
 
 
 <P>&nbsp;&nbsp;<br>
