--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
@@ -4,18 +4,17 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Versioning your code</title>
+<title>Versioning your project</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>
 Versioning your project</h3>
-<P CLASS="Para">
-Now that our project is complete it is time to version it. If you were paying
-close attention while we were releasing our file resources you probably noticed
-that the repository automatically assigned them version numbers, or to be more
-accurate &quot;revision numbers&quot;. As we released our files the only
-information we needed to supply was a release comment.&nbsp;</P>
+<P CLASS="Para"> Now that our project is complete it is time to version it. If 
+  you were paying close attention while we were committing our file resources 
+  you probably noticed that the repository automatically assigned them version 
+  numbers, or to be more accurate &quot;revision numbers&quot;. As we released 
+  our files the only information we needed to supply was a commit comment.&nbsp;</P>
 <P CLASS="Para">To version our
 project proceed as follows:</P>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
@@ -42,8 +41,7 @@ Select the project JanesTeamProject.</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P>
-In the Navigator view select Team &gt; Version from Workspace...</P>
+      <P> In the Navigator view select Team &gt; Tag as Version...</P>
 </TD>
 </TR>
 <TR>
@@ -54,8 +52,8 @@ In the Navigator view select Team &gt; Version from Workspace...</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P>When the Version Selected Resources dialog opens click on
-&quot;One Name&quot; and enter the version name A1 and click OK.</P>
+      <P>When the Tag Resources dialog opens enter the version name A1 and click 
+        OK.</P>
 </TD>
 </TR>
 <TR>
@@ -66,8 +64,7 @@ In the Navigator view select Team &gt; Version from Workspace...</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P>
-Select the Repositories view.</P>
+      <P> Select the CVS Repositories view.</P>
 </TD>
 </TR>
 <TR>
@@ -78,10 +75,10 @@ Select the Repositories view.</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P>Expand Project Versions, and JanesTeamProject. Observe that under
-JaneTeamProject there is now a version of this project whose version number is
-A1. Looking closely at the contents of folder1 you can also see that the version
-numbers of the individual files match the version numbers in our workbench.</P>
+      <P>Expand Versions, and JanesTeamProject. Observe that under JaneTeamProject there 
+        is now a version of this project whose version number is A1. Looking closely 
+        at the contents of folder1 you can also see that the version numbers of 
+        the individual files match the version numbers in our workbench.</P>
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image85_version2.jpg" alt="Repositories View"></p>
 </blockquote>
