--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
@@ -4,17 +4,16 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Adding stream resources</title>
+<title>Checking out a project</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>
-Adding stream resources</h3>
+<h3> Checking out a project</h3>
 <P CLASS="Para">Coworker Fred has several tasks in front of him:&nbsp;</P>
 <ul>
   <li>Fred will add the project to his workbench</li>
   <li>Fred will make changes to file1.txt and file2.txt</li>
-  <li>Fred will synchronize and release his outgoing changes to the two files.</li>
+  <li>Fred will synchronize and commit his outgoing changes to the two files.</li>
 </ul>
 <p>Fred's first step is to add the project to his workspace as follows:</p>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
@@ -28,16 +27,15 @@ Adding stream resources</h3>
 1.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
-In the Repositories view context menu choose New &gt;&nbsp; CVS
-    Repository Location...
-<blockquote>
+    <TD valign="top" align="left"> In the CVS Repositories view context menu choose 
+      New &gt;&nbsp; Repository Location... 
+      <blockquote>
   <blockquote>
     <p><img align="texttop" border="0" src="../images/Image82_repo_new.jpg" alt="Context menu" width="496" height="137" ></p>
   </blockquote>
 </blockquote>
-<P CLASS="Para">
-&nbsp;</P>
+<P CLASS="Para">&nbsp;
+</P>
 </TD>
 </TR>
 <TR>
@@ -61,8 +59,8 @@ Jane filled in.
 </P>
 </TD>
 <TD valign="top" align="left">
-<P CLASS="Para">In the Repositories view select the repository location and
-expand Streams, then expand HEAD.</P>
+      <P CLASS="Para">In the CS Repositories view expand the repository location, 
+        then expand HEAD.</P>
 <P CLASS="Para">Under HEAD you should see the project (JanesTeamProject) that
 Jane created.</P>
 <blockquote>
@@ -87,9 +85,9 @@ Expand folder1 and you should see the three files that Jane created.
 <TD valign="top" align="left">
 <b>5.</b>
 </TD>
-<TD valign="top" align="left">
-Select the project and choose Add to Workspace from the context menu.
-<blockquote>
+    <TD valign="top" align="left"> Select the project and choose Checkout as Project 
+      from the context menu. 
+      <blockquote>
   <p><img align="texttop" border="0" src="../images/Image83_fred3_add.jpg" alt="Add to Workspace"></p>
 </blockquote>
 </TD>
