--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
@@ -4,92 +4,63 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Releasing</title>
+<title>Committing</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>
-Releasing</h3>
-<p CLASS="Para">
-We will now use the Release Mode of the Synchronize view to release the one
-remaining outgoing change.&nbsp;</p>
+<h3> Committing</h3>
+<p CLASS="Para"> We will now use the Outgoing Mode of the Synchronize view to 
+  commit the one remaining outgoing change.&nbsp;</p>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-Place the Synchronize view into release mode by clicking on the Release Mode
-button (#1) and confirming that the title of the view now indicates we are in Release
-Mode (#2).
-<p><img align="texttop" border="0" src="../images/Image84_relmode.jpg" width="483" height="110" alt="Release mode"></p>
-<p>&nbsp;
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>2.</b>
-</TD>
-<TD valign="top" align="left">
-Select file3.txt (the outgoing change).&nbsp;
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
- The comparison viewer shows that&nbsp;our copy of file3.txt has a change to the
-second line.&nbsp; The repository copy is shown in the right pane.
-<p><img align="texttop" border="0" src="../images/Image84_jane.jpg" width="484" height="92" alt="Text compare">
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-From the context menu of file3.txt choose Release. Be sure to enter a meaningful
-description when prompted for one.&nbsp;
-<p>Your workbench copy is now released into the stream.</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-Select the Resource perspective from the shortcut bar at the far left of the
-window.
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>6.</b>
-</TD>
-<TD valign="top" align="left">
-At this point Fred may want to Synchronize with the stream to catch up to the
-changes you just released.
-</TD>
-</TR>
-</TBODY>
+  <THEAD> </THEAD> <TBODY> 
+  <TR> 
+    <TD valign="top" align="left"> 
+      <P CLASS="Para"> <b>1.</b> </P>
+    </TD>
+    <TD valign="top" align="left"> Place the Synchronize view into outgoing mode 
+      by clicking on the Outgoing Mode button (#1) and confirming that the title 
+      of the view now indicates we are in Outgoing Mode (#2). 
+      <p><img align="texttop" border="0" src="../images/Image84_relmode.jpg" width="483" height="110" alt="Outgoing mode"></p>
+      <p>&nbsp; 
+    </TD>
+  </TR>
+  <TR> 
+    <TD valign="top" align="left"> <b>2.</b> </TD>
+    <TD valign="top" align="left"> Select file3.txt (the outgoing change).&nbsp; 
+    </TD>
+  </TR>
+  <TR> 
+    <TD valign="top" align="left"> 
+      <P CLASS="Para"> <b>3.</b> </P>
+    </TD>
+    <TD valign="top" align="left"> The comparison viewer shows that&nbsp;our copy 
+      of file3.txt has a change to the second line.&nbsp; The repository copy 
+      is shown in the right pane. 
+      <p><img align="texttop" border="0" src="../images/Image84_jane.jpg" width="484" height="92" alt="Text compare">
+    </TD>
+  </TR>
+  <TR> 
+    <TD valign="top" align="left"> 
+      <P CLASS="Para"> <b>4.</b> </P>
+    </TD>
+    <TD valign="top" align="left"> From the context menu of file3.txt choose Commit. 
+      Be sure to enter a meaningful description when prompted for one.&nbsp; 
+      <p>Your workbench copy is now committed into the repository.</p>
+    </TD>
+  </TR>
+  <TR> 
+    <TD valign="top" align="left"> 
+      <P CLASS="Para"> <b>5.</b> </P>
+    </TD>
+    <TD valign="top" align="left"> At this point Fred may want to Synchronize 
+      with the repository to catch up to the changes you just committed. </TD>
+  </TR>
+  </TBODY> 
 </TABLE>
-<P>We have successfully collaborated with Fred by making simultaneous
-changes to the same project. The workbench's Synchronization view&nbsp; and
-Repository History view allowed us to determine the specific changes each user
-was making and to quickly stay on top of the ongoing changes being released into
-the stream.
+<P>We have successfully collaborated with Fred by making simultaneous changes 
+  to the same project. The Synchronization view&nbsp; and CVS Repository History 
+  view allowed us to determine the specific changes each user was making and to 
+  quickly stay on top of the ongoing changes being committed into the repository. 
 </P>
 
 <P><br>
