--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync_view.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync_view.htm
@@ -10,17 +10,16 @@
 <BODY BGCOLOR="#ffffff">
 <h3>
 Synchronize view</h3>
-<p CLASS="Para">
-If you look closely at the
-title of the Synchronize view you will see that we have started in Catch Up Mode
-(see #1). This is because there are changes in the stream that we should first
-integrate before releasing our own changes.</p>
-<p CLASS="Para"><img align="texttop" border="0" src="../images/Image83_jane2b.jpg" width="482" height="387" alt="Catch up mode"></p>
-<p CLASS="Para">It is important to first catch up to changes made to the stream, retest with
-those changes loaded locally with your soon-to-be-released changes and then release your
-changes.&nbsp; By first taking the latest stream changes, and retesting, it helps
-to ensure that the changes you are about to release will actually work with the
-current state of the stream.</p>
+<p CLASS="Para"> If you look closely at the title of the Synchronize view you 
+  will see that we have started in Incoming Mode (see #1). This is because there 
+  are changes in the repository that we should first integrate before committing 
+  our own changes.</p>
+<p CLASS="Para"><img align="texttop" border="0" src="../images/Image83_jane2b.jpg" width="482" height="387" alt="Incoming mode"></p>
+<p CLASS="Para">It is important to first update to changes made to the repository, 
+  retest with those changes loaded locally with your soon-to-be-committed changes 
+  and then commit your changes.&nbsp; By first taking the latest repository changes, 
+  and retesting, it helps to ensure that the changes you are about to commit will 
+  actually work with the current state of the repository.</p>
 <P CLASS="para">&nbsp;<br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
