--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_review.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_review.htm
@@ -10,36 +10,34 @@
 <BODY BGCOLOR="#ffffff">
 <h3>
 A quick review</h3>
-<p CLASS="Para">
-Now that we have experienced the fun of working in a stream it's time to step
-back and take note of some of the more important but subtle issues related to
-working&nbsp; with a repository.&nbsp;</p>
+<p CLASS="Para"> Now that we have experienced the fun of working in a repository 
+  it's time to step back and take note of some of the more important but subtle 
+  issues related to working&nbsp; with a repository.&nbsp;</p>
 <ul>
-  <li>When we versioned the project we did so by
-versioning the project as it appeared in our workbench. For this reason it is
-important to synchronize the project with the stream prior to versioning
-it. Otherwise another user may have released interesting
-changes to the project which you have yet to catch up to. If you proceed to
-    version the project without catching up, you will version it without these
-    changes.&nbsp;</li>
-  <li>The stream contains all projects in the
-repository. Individual users pick which projects they are interested in and add
-    them to the workspace. From that point on they are synchronizing those
-    projects (only) with respect to the stream.</li>
-  <li>The stream represents a large in-progress collection of all known
-    projects. From the stream's perspective, everything is always open for
-    change.</li>
-  <li>The act of versioning a project effectively snapshots it and places it
-    into the Project Versions section of the repository, however the stream is
+  <li>When we versioned the project we did so by versioning the project as it 
+    appeared in our workbench. For this reason it is important to synchronize 
+    the project with the repository (i.e. HEAD or the branch we are working inh) 
+    prior to versioning it. Otherwise another user may have committed interesting 
+    changes to the project which you have yet to update to. If you proceed to 
+    version the project without updating, you will version it without these changes.&nbsp;</li>
+  <li>The repository contains all projects in the repository. Individual users 
+    pick which projects they are interested in and check them out into the workspace. 
+    From that point on they are synchronizing those projects (only) with respect 
+    to the repository.</li>
+  <li>The repository represents a large in-progress collection of all known projects. 
+    From the repository's perspective, everything in HEAD or on a branch is always 
+    open for change.</li>
+  <li>The act of versioning a project effectively snapshots it and places it into 
+    the Versions section of the repository, however the repository branches are 
     still open for change.</li>
-  <li>It is important to first catch up to changes made to the stream, retest with
-those changes and your soon-to-be-released changes and then release your
-changes.&nbsp; By first taking the latest stream changes, and retesting, it helps
-to ensure that the changes you are about to release will actually work with the
-current state of the stream.</li>
-  <li>Each project is associated with a specific stream in a specific
-    repository. Different projects can be associated with different repositories
-    that may in fact be on completely different servers.&nbsp; </li>
+  <li>It is important to first update to changes made to the repository, retest 
+    with those changes and your soon-to-be-committed changes and then commit your 
+    changes.&nbsp; By first taking the latest changes in the branch , and retesting, 
+    it helps to ensure that the changes you are about to commit will actually 
+    work with the current state of the branch.</li>
+  <li>Each project is associated with a specific repository. Different projects 
+    can be associated with different repositories that may in fact be on completely 
+    different servers.&nbsp; </li>
 </ul>
 
 
