--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-21.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-21.htm
@@ -25,7 +25,7 @@ You can create a new fast view by dragging any open view to the
 shortcut bar or by selecting <b>Fast View</b> from the menu that opens when you
 click the icon at the left end of the view's title bar.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
-<a href="concepts-2.htm">The Workbench</a><a href="concepts-18.htm"><br>
+<a href="concepts-2.htm">Workbench</a><a href="concepts-18.htm"><br>
 Toolbars</a></P>
 
 
@@ -35,7 +35,7 @@ Moving and docking views</a><br>
 <a href="../tasks/tasks-3i.htm">Maximizing a view or editor</a></P>
 
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </HTML>
