--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-22.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-22.htm
@@ -54,7 +54,7 @@ Building resources</a><br>
 </a><a href="../tasks/tasks-16.htm">Performing builds automatically<br>
 </a><a href="../tasks/tasks-17.htm">Saving resources automatically before a manual build</a><a href="../tasks/tasks-14.htm"><br>
 Changing build order</a></p>
-<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
 
 
