--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
@@ -54,7 +54,7 @@ tools can also be used    by CVS.</p>
   
 <p>&nbsp;<br>
  <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
- alt="Copyright IBM Corporation and others 2000, 2002" border="0">
+ alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14">
 </a> </p>
   
 </body>
