--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27v.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27v.htm
@@ -35,20 +35,19 @@
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-92.htm"><br>
-Creating a repository location</a><a href="../tasks/tasks-94.htm"><br>
-Discarding a repository location</a><a href="../tasks/tasks-93.htm"><br>
-Refreshing the repository view</a><a href="../tasks/tasks-96.htm"><br>
-Adding resources from a repository to the workbench</a>&nbsp;<a href="../tasks/tasks-103.htm"><br>
-Replacing resources with a repository
-        version</a><a href="../tasks/tasks-111.htm"><br>
-Creating a new stream</a><a href="../tasks/tasks-117.htm"><br>
-Associating a project with a stream</a><a href="../tasks/tasks-119.htm"><br>
-Viewing the history of a stream resource</a>
+Creating a CVS repository location</a><a href="../tasks/tasks-94.htm"><br>
+Discarding a CVS repository location</a><a href="../tasks/tasks-93.htm"><br>
+Refreshing the CVS repositories view</a><a href="../tasks/tasks-96.htm"><br>
+Checking out a project from a CVS repository</a>&nbsp;<a href="../tasks/tasks-103.htm"><br>
+Replacing resources in the workbench</a><a href="../tasks/tasks-111.htm"><br>
+Defining a branch tag</a><a href="../tasks/tasks-117.htm"><br>
+Sharing a new project with CVS</a><a href="../tasks/tasks-119.htm"><br>
+Viewing a File's revision history</a>
 </p>
 
 
 <p CLASS="Para">
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </p>
 
