--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-30.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-30.htm
@@ -64,9 +64,11 @@ Updating</a><a href="../tasks/tasks-113b.htm"><br>
   Merging from a branch</a><a href="../tasks/tasks-114.htm"><br>
 Committing</a> </p>
      
-<p> <img src="../images/ngibmcpy.gif"
- alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-  </p>
+<a href="../hglegal2002.htm"><img
+ src="../images/ngibmcpy2002.gif"
+ alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved."
+ border="0" width="324" height="14">
+
      
 </body>
 </html>
