--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-31.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-31.htm
@@ -25,23 +25,23 @@ example, all of the lines are highlighted because none of them match.) </P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image234_cmp_another.jpg" alt="Picture of two edit panes, side by side, with all lines of text highlighted." width="548" height="268"> </P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="concepts-30b.htm">Synchronize view<br>
+<a href="concepts-30b.htm">CVS Synchronize view<br>
 </a><a href="concepts-29.htm">Three-way comparisons</a></p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-92.htm"><br>
 </a><a href="../tasks/tasks-68.htm">Comparing resources</a>
 <a href="../tasks/tasks-115.htm"><br>
-Synchronizing with a stream<br>
-</a><a href="../tasks/tasks-68dg.htm">Merging changes in the comparison editor</a><a href="../tasks/tasks-113.htm"><br>
+Synchronizing with the repository<br>
+</a><a href="../tasks/tasks-68dg.htm">Merging changes in the Compare editor</a><a href="../tasks/tasks-113.htm"><br>
 </a><a href="../tasks/tasks-113b.htm">
-Resolving conflicts and merging changes</a><a href="../tasks/tasks-68b.htm"><br>
+Resolving conflicts</a><a href="../tasks/tasks-68b.htm"><br>
 Setting preferences for comparing files</a>
 </p>
 
 
 <P CLASS="Para" Label=Type>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
