--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-6a.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-6a.htm
@@ -26,7 +26,11 @@ Editors</a></P>
 <a href="../tasks/tasks-51.htm">Associating editors with file types</a><br>
 <a href="../tasks/tasks-52.htm">Editing files outside the workbench</a></P>
 <P><br>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<a href="../hglegal2002.htm"><img
+ src="../images/ngibmcpy2002.gif"
+ alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved."
+ border="0" width="324" height="14">
+
 </P>
 
 
