--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-8.htm
@@ -20,16 +20,14 @@ resources in the workbench are up-to-date. </P>
 This is especially important when using the Team support. </P>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
-<a href="concepts-2.htm">The workbench</a><a href="concepts-12.htm"><br>
+<a href="concepts-2.htm">Workbench</a><a href="concepts-12.htm"><br>
 Resources</a><a href="concepts-26.htm"><br>
-Team support</a></p>
+Team programming with CVS</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks." width="159" height="27"><br>
-<a href="../tasks/tasks-52.htm">Editing files externally</a>
-
-<P CLASS="Para" Label=Type>
-<br>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-</P>
+<a href="../tasks/tasks-52.htm">Editing files outside thr workbench</a> <p><a href="../hglegal2002.htm"><img
+ src="../images/ngibmcpy2002.gif"
+ alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved."
+ border="0" width="324" height="14">
 
 
 </BODY>
