--- a/bundles/org.eclipse.platform.doc.user/concepts/crhview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/crhview.htm
@@ -48,7 +48,7 @@ Local history</a>
 </P>
 
 
-<P><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+<P><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
