--- a/bundles/org.eclipse.platform.doc.user/concepts/ctskview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/ctskview.htm
@@ -39,8 +39,8 @@ to the current perspective, click <b>Window &gt; Show View &gt; Tasks</b>.
 <a href="../tasks/tasks-3.htm">Opening views</a><br>
 <a href="../tasks/tasks-3e.htm">Moving and docking views</a><br>
 <a href="../tasks/tasks-77.htm">Adding line items in the Tasks view</a><br>
-<a href="../tasks/tasks-77b.htm">Associating a task with an editable resource</a><br>
-<a href="../tasks/tasks-79.htm">Filtering the task list</a><br>
+<a href="../tasks/tasks-77b.htm">Associating a task with a resource</a><br>
+<a href="../tasks/tasks-79.htm">Filtering the task view</a><br>
 <a href="../tasks/tasks-81b.htm">Creating a bookmark for an entire file</a><br>
 <a href="../tasks/tasks-81.htm">Creating a bookmark within a file</a><br>
 <a href="../tasks/tquickfix.htm">Automatically fixing problems</a><br>
@@ -51,7 +51,7 @@ to the current perspective, click <b>Window &gt; Show View &gt; Tasks</b>.
 <a href="../reference/ref-31.htm">Tasks view</a>
 </p>
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
 
 
