--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-2.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-2.htm
@@ -23,12 +23,12 @@ Features<br>
 </a><a href="concepts-12.htm">Resources</a><a href="concepts-4.htm"><br>
 Perspectives</a><a href="concepts-5.htm"><br>
 Views<br>
-</a><a href="concepts-6.htm">Editors and the editor area<br>
-</a><a href="concepts-27c.htm">Repositories</a></P>
+</a><a href="concepts-6.htm">Editors<br>
+</a><a href="concepts-27c.htm">CVS Repositories</a></P>
 
 
 <P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-34.htm"><br>
-Installing features</a><a href="../tasks/tasks-9f.htm"><br>
+Installing new features with the update manager</a><a href="../tasks/tasks-9f.htm"><br>
 Opening perspectives<br>
 </a><a href="../tasks/tasks-3.htm">Opening views</a><br>
 <a href="../tasks/tasks-28.htm">Switching between perspectives</a><br>
@@ -39,7 +39,7 @@ Opening perspectives<br>
 Toolbar buttons</a></P>
 
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
