--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
@@ -75,7 +75,7 @@ preferable.</p>
 <p><br>
   <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
  alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved."
- border="0">
+ border="0" width="324" height="14">
  </a>  </p>
      
 </body>
