--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
@@ -67,7 +67,7 @@ and outgoing changes in blue. </p>
 <p class="Para"> <a href="../hglegal2002.htm"><img
  src="../images/ngibmcpy2002.gif"
  alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved."
- border="0">
+ border="0" width="324" height="14">
   </a>  </p>
        
 </body>
