--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-30b.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-30b.htm
@@ -63,30 +63,33 @@ Text Compare Pane</h2>
 <P>
 This pane allows you to view the content differences
 of the resource selected in the structure compare pane.
-You can choose to ignore whitespace differences from the view's drop-down menu.</P>
+You can choose to ignore white space differences from the view's drop-down menu.</P>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="concepts-26.htm">Team programming</a> &nbsp;<a href="../reference/ref-51a.htm"><br>
+<a href="concepts-26.htm">Team programming with CVS</a> &nbsp;<a href="../reference/ref-51a.htm"><br>
 </a><a href="concepts-30.htm">
-Team synchronization</a>&nbsp;<br>
+Synchronizing with a CVS Repository</a><br>
 <a href="concepts-31.htm">Comparison editors</a></p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="../tasks/tasks-113.htm"><br>
-Catching up</a><a href="../tasks/tasks-113b.htm"><br>
-Resolving conflicts and merging changes</a><a href="../tasks/tasks-100b.htm"><br>
-Merging from a stream</a><a href="../tasks/tasks-114.htm"><br>
-Releasing resources to the stream</a><a href="../tasks/tasks-68.htm"><br>
+Synchronizing with the repository</a><a href="../tasks/tasks-113.htm"><br>
+Updating</a><a href="../tasks/tasks-113b.htm"><br>
+Resolving conflicts</a><a href="../tasks/tasks-100b.htm"><br>
+Merging from a branch</a><a href="../tasks/tasks-114.htm"><br>
+Committing</a><a href="../tasks/tasks-68.htm"><br>
 </a>
 <a href="../tasks/tasks-68.htm">Comparing resources<br>
 </a>
-<a href="../tasks/tasks-68dg.htm">Merging changes in the comparison editor</a>
+<a href="../tasks/tasks-68dg.htm">Merging changes in the Compare editor</a>
 </p>
 
 
-<p><img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-</P>
+<a href="../hglegal2002.htm"><img
+ src="../images/ngibmcpy2002.gif"
+ alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved."
+ border="0" width="324" height="14">
+
 
 
 </BODY>
