--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-6.htm
@@ -36,7 +36,7 @@ but you can choose to tile them in order to view source files simultaneously.</P
 <P CLASS="Para" Label=Type>
 Here is an example of a text editor in the workbench:</P>
 <P CLASS="Para" Label=Type> 
-<img align="texttop" border="0" src="../images/Image5_text_editor.jpg" alt="Text editor"></P>
+<img align="texttop" border="0" src="../images/Image5_text_editor.jpg" alt="Text editor" width="645" height="497"></P>
 <P>&nbsp;The gray border at the left margin of the editor area might contain
 icons that flag errors, warnings, or problems detected by the system. Icons also
 appear if you have created bookmarks, added breakpoints for debugging, or
@@ -46,7 +46,7 @@ margin of the editor by moving the mouse cursor over them.
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-2.htm"><br>
-The workbench<br>
+Workbench<br>
 </a><a href="concepts-6a.htm">External editors</a><a href="cbookmrk.htm"><br>
 Bookmarks</a><a href="ctskview.htm"><br>
 Tasks view<br>
