--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-7.htm
@@ -17,7 +17,11 @@ menu bar and toolbar of a perspective.</P>
 </a><a href="../tasks/tasks-9k.htm">Configuring perspectives</a><br>
 <a href="../tasks/tasks-9i.htm">Saving a user-defined perspective</a></p>
 <P CLASS="Para" Label=Type>&nbsp;<br>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<a href="../hglegal2002.htm"><img
+ src="../images/ngibmcpy2002.gif"
+ alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved."
+ border="0" width="324" height="14">
+
 </P>
 
 
