--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9i.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9i.htm
@@ -1,1 +1,41 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Saving a user-defined perspective</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Saving a user-defined perspective</H1><P>If you have modified a perspective by adding, deleting, ormoving (docking) views, you can save your changes for future use.</P><ol>  <li>Switch to the perspective that you want to save.</li>  <li>Select <b>Window &gt; Save Perspective As</b> from the main menu bar.</li></ol><p>The name of the new perspective is added to the <b>Window &gt; Open Perspective</b> menu.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br><a href="../concepts/concepts-4.htm">Perspectives</a><br><a href="../concepts/concepts-5.htm">Views</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-9j.htm">Resetting perspectives</a><br><a href="tasks-9d.htm">Deleting a user-defined perspective</a><br><a href="tasks-3.htm">Opening views</a><br><a href="tasks-3e.htm">Moving and docking views</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Saving a user-defined perspective</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Saving a user-defined perspective</H1>
+<P>If you have modified a perspective by adding, deleting, or
+moving (docking) views, you can save your changes for future use.
+</P>
+
+<ol>
+  <li>Switch to the perspective that you want to save.</li>
+  <li>Select <b>Window &gt; Save Perspective As</b> from the main menu bar.</li>
+</ol>
+
+<p>The name of the new perspective is added to the <b>Window &gt; Open Perspective</b> menu.
+</p>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
+<a href="../concepts/concepts-4.htm">Perspectives</a><br>
+<a href="../concepts/concepts-5.htm">Views</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-9j.htm">Resetting perspectives</a><br>
+<a href="tasks-9d.htm">Deleting a user-defined perspective</a><br>
+<a href="tasks-3.htm">Opening views</a><br>
+<a href="tasks-3e.htm">Moving and docking views</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
+</p>
+
+</BODY>
+</HTML>
