--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-90.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-90.htm
@@ -12,36 +12,37 @@
 Running external tools</H1>
 
 <p CLASS="Para">The workbench provides a mechanism for running tools that are 
-not part of the it. The following
-steps illustrate how to configure an external tool:</p>
-<ul>
-  <li><p CLASS="Para">Go to the menu <b>Run &gt; External Tools &gt; Configure</b>.</p>
+not part of it. To configure an external tool:</p>
+<ol>
+  <li>Click <b>Run &gt; External Tools &gt; Configure</b>.
   </li>
-  <li><p CLASS="Para">Click on the <b>New</b> button.</p>
+  <li>Click the <b>New</b> button.
   </li>
-  <li><p CLASS="Para">Enter a name for your external tool (e.g. My External Tool).</p>
+  <li>Enter a name for your external tool (for example, My External Tool).
   </li>
-  <li><p CLASS="Para">Click on the <b>Browse File System</b> button.</p>
+  <li>Click the <b>Browse File System</b> button.
   </li>
-  <li><p CLASS="Para">Find the tool you want to run (e.g. in Windows it is 
-  usually a file with the extension <b>.exe</b> or <b>.bat</b>).</p>
+  <li>Find the tool you want to run (for example, on Windows it is 
+  usually a file with the extension .exe or .bat).
   </li>
-  <li><p CLASS="Para">In the <b>Tool Arguments</b> field enter the necessary 
-  arguments for the tool (optional).</p>
+  <li>(Optional) In the <b>Tool Arguments</b> field enter the necessary 
+  arguments for the tool.
   </li>
-  <li><p CLASS="Para">In the <b>Working directory</b> field enter the working directory 
-  for the tool (optional).</p>
+  <li>(Optional)In the <b>Working directory</b> field enter the working directory 
+  for the tool.
   </li>
-  <li><p CLASS="Para">Click <b>OK</b>.</p>
+  <li>Click <b>OK</b>.
   </li>
-  <li><p CLASS="Para">To run the tool go to the menu <b>Run &gt; External Tools &gt; 
-  My External Tool</b>.</p>
+  <li>To run the tool, click <b>Run &gt; External Tools &gt; 
+  My External Tool</b>.
   </li>
-</ul>
-<p CLASS="Para">It is also possible to use an external tool to build a project. 
-Select the desired project, from its pop-up menu choose <b>Properties &gt; External 
-Tools Builders</b> and configure accordingly.</p>
-
+</ol>
+<p CLASS="Para">It is also possible to set up and run an external tool to build a project. 
+<ol>
+<li>Select the desired project</li>
+<li>From its pop-up menu choose <b>Properties</b>.</li>
+<li>Click <b>External Tools Builders</b> from the list, and configure the tool as described above.</li>
+</ol>
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/cexttools.htm">External tools</a><br>
 </P>
